cmake_minimum_required(VERSION 3.27)
project(ProgrammersCPP)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(ProgrammersCPP
        2Dimension/2Dimension.cpp
        2Dimension/_2Dimension.cpp
        369Game/369Game.cpp
        369Game/_369Game.cpp
        AgeConvert/AgeConvert.cpp
        AlienDictionary/AlienDictionary.cpp
        AntWar/AntWar.cpp
        AStringToB/AStringToB.cpp
        BallSharing/BallSharing.cpp
        BallThrowing/BallThrowing.cpp
        BinarySum/BinarySum.cpp
        ChangeIndex/ChangeIndex.cpp
        ClosestNumber/ClosestNumber.cpp
        CompleteTriangle/CompleteTriangle.cpp
        CompositeNumber/CompositeNumber.cpp
        Count7/Count7.cpp
        CountK/CountK.cpp
        CtrlZ/CtrlZ.cpp
        CuttingPaper/CuttingPaper.cpp
        Decoding/Decoding.cpp
        Dice/Dice.cpp
        DistinctChar/DistinctChar.cpp
        DividePrimeNumber/DividePrimeNumber.cpp
        Divisors/Divisors.cpp
        DuplicateDelete/DuplicateDelete.cpp
        ER/ER.cpp
        Factorial/Factorial.cpp
        FindNumber/FindNumber.cpp
        MaxIndex/MaxIndex.cpp
        MaxValue/MaxValue.cpp
        MorseCode/MorseCode.cpp
        PizzaSlice/PizzaSlice.cpp
        RectangleWidth/RectangleWidth.cpp
        RPGGame/RPGGame.cpp
        SharingBalls/SharingBalls.cpp
        SliceAndSave/SliceAndSave.cpp
        SortString/SortString.cpp
        StringCalculate/StringCalculate.cpp
        StringSort/StringSort.cpp
        StringToInt/StringToInt.cpp
        SumNumber/SumNumber.cpp
        SwitchDirection/SwitchDirection.cpp
        Triangle/Triangle.cpp
        Ant.cpp
        Ant.h
        ProgrammersCPP.cpp
        LoginDB/LoginDB.cpp)
